# ajuna-pallets

./: .editorconfig  .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: .codecov.yml
.github/workflows/: check-pull-request.yml  cleanup-cache.yml
affiliate-fix-scripts/: affiliatee-chains.csv  encoded-call.txt  event-accounts.csv  event-ids.csv  generate-chains.py  generate-event-accounts.py  generate-event-ids.py  generate-transactions.mjs
orml-benchmarks/: Cargo.toml
orml-benchmarks/src/: lib.rs  mock.rs  utils.rs  vesting.rs
orml-pallets-benchmarking/: Cargo.toml
orml-pallets-benchmarking/src/: lib.rs  mock.rs  utils.rs  vesting.rs  xcm_config.rs
orml-pallets-benchmarking/src/benchmarks/: mod.rs  utils.rs  vesting.rs  xcm.rs  xtokens.rs
pallets/ajuna-affiliates/: Cargo.toml
pallets/ajuna-affiliates/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/ajuna-awesome-avatars/: Cargo.toml  README.md
pallets/ajuna-awesome-avatars/benchmarking/: Cargo.toml
pallets/ajuna-awesome-avatars/benchmarking/src/: lib.rs  mock.rs
pallets/ajuna-awesome-avatars/src/: benchmark_helper.rs  lib.rs  mock.rs  tests.rs
pallets/ajuna-awesome-avatars/src/impls/: account_manager.rs  asset_manager.rs  mod.rs
pallets/ajuna-awesome-avatars/src/migration/: mod.rs  v5.rs  v6.rs  weights.rs
pallets/ajuna-awesome-avatars/src/migration/v5/: v5.rs
pallets/ajuna-awesome-avatars/src/migration/v6/: benchmarks.rs  mod.rs  weights.rs
pallets/ajuna-awesome-avatars/src/traits/: asset_manager.rs
pallets/ajuna-awesome-avatars/src/types/: account.rs  affiliates.rs  config.rs  fee.rs  mod.rs  season.rs
pallets/ajuna-awesome-avatars/src/types/avatar/: force.rs  mod.rs  nft.rs  tournament.rs
pallets/ajuna-awesome-avatars/src/types/avatar/versions/: mod.rs  v1.rs  v3.rs  v4.rs
pallets/ajuna-awesome-avatars/src/types/avatar/versions/utils/: avatar_builder.rs  dna_utils.rs  hashing.rs  mod.rs  slot_roller.rs  test_utils.rs  types.rs  wrapped_avatar.rs
pallets/ajuna-awesome-avatars/src/types/avatar/versions/v2/: avatar_builder.rs  avatar_utils.rs  constants.rs  mod.rs  mutator.rs  slot_roller.rs  test_utils.rs  types.rs
pallets/ajuna-awesome-avatars/src/types/avatar/versions/v2/combinator/: assemble.rs  breed.rs  build.rs  equip.rs  feed.rs  flask.rs  glimmer.rs  mate.rs  mod.rs  spark.rs  stack.rs  statue.rs  tinker.rs
pallets/ajuna-awesome-avatars/src/types/avatar/versions/v4/: avatar_builder.rs  constants.rs  mod.rs  mutator.rs  test_utils.rs  types.rs
pallets/ajuna-awesome-avatars/src/types/avatar/versions/v4/combinator/: engage_in_event.rs  extract_stardust.rs  minht_travel_point.rs  mint_travel_point.rs  mod.rs  upgrade_ship.rs
pallets/ajuna-awesome-avatars/src/types/avatar/versions/v4/dna_interpreters/: captain.rs  cluster_map.rs  cyoa.rs  mod.rs  moon.rs  nebula.rs  resource.rs  ship.rs  temp_nebula.rs  travel_point.rs  unprospected_moon.rs
pallets/ajuna-battle-mogs/: Cargo.toml
pallets/ajuna-battle-mogs/src/: algorithm.rs  lib.rs  mock.rs  tests.rs
pallets/ajuna-battle-royale/: Cargo.toml
pallets/ajuna-battle-royale/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/ajuna-board/: Cargo.toml
pallets/ajuna-board/src/: benchmarking.rs  dot4gravity.rs  lib.rs  mock.rs  tests.rs
pallets/ajuna-matchmaker/: Cargo.toml
pallets/ajuna-matchmaker/src/: brackets.rs  lib.rs  mock.rs  tests.rs
pallets/ajuna-new-omega/: Cargo.toml
pallets/ajuna-new-omega/src/: consts.rs  lib.rs  mock.rs  random.rs  simulator.rs  tests.rs  types.rs
pallets/ajuna-nft-staking/: Cargo.toml  README.md
pallets/ajuna-nft-staking/benchmarking/: Cargo.toml
pallets/ajuna-nft-staking/benchmarking/src/: lib.rs  mock.rs
pallets/ajuna-nft-staking/src/: contracts.rs  lib.rs  weights.rs
pallets/ajuna-nft-staking/src/tests/: mock.rs
pallets/ajuna-nft-staking/src/tests/ext/: cancel.rs
pallets/ajuna-nft-transfer/: Cargo.toml  README.md
pallets/ajuna-nft-transfer/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/ajuna-tournament/: Cargo.toml  README.md
pallets/ajuna-tournament/src/: account.rs  config.rs  lib.rs  mock.rs  tests.rs  traits.rs
pallets/ajuna-wildcard/: Cargo.toml
pallets/ajuna-wildcard/src/: lib.rs
pallets/ajuna-wildcard/src/tests/: mock.rs
pallets/ajuna-wildcard/src/tests/ext/: mod.rs  withdraw.rs
pallets/sage/: Cargo.toml
pallets/sage/src/: asset.rs  lib.rs
pallets/sage/src/tests/: mod.rs  mutator.rs
pallets/sage/src/tests/mock/: mod.rs  mutator.rs
pallets/sage/src/traits/: mod.rs  mutator.rs
primitives/: Cargo.toml
primitives/src/: account_manager.rs  asset_manager.rs  lib.rs
sage/api/: Cargo.toml
sage/api/src/: error.rs  lib.rs  rules.rs  traits.rs
sage/example-transition/: Cargo.toml
sage/example-transition/src/: lib.rs
sage/pallet/: Cargo.toml
sage/pallet/src/: handle_fees.rs  lib.rs  mock.rs  weights.rs
sage/sage-api/: Cargo.toml
sage/sage-api/src/: example_transitions.rs  handle_fees.rs  lib.rs  primitives.rs  sage.rs  weights.rs
