[workspace.package]
authors    = [ "Ajuna Network <https://github.com/ajuna-network>" ]
edition    = "2021"
homepage   = "https://ajuna.io"
repository = "https://github.com/ajuna-network/ajuna-pallets"
version    = "0.7.0"

[workspace]
resolver = "2"
members = [
    "orml-pallets-benchmarking",
    "pallets/*",
    "pallets/ajuna-awesome-avatars/benchmarking",
    "pallets/ajuna-nft-staking/benchmarking",
]

[workspace.dependencies]
# General
hex = { version = "0.4.3", default-features = false }
log = { version = "0.4.17", default-features = false }

# Parity codec
parity-scale-codec = { version = "3.0.0", default-features = false }
scale-info         = { version = "2.1.1", default-features = false }

# Substrate
frame-benchmarking                         = { version = "32.0.0", default-features = false }
frame-support                              = { version = "32.0.0", default-features = false }
frame-system                               = { version = "32.0.0", default-features = false }
pallet-assets                              = { version = "33.0.0", default-features = false }
pallet-balances                            = { version = "33.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "20.0.0", default-features = false }
pallet-nfts                                = { version = "26.0.0", default-features = false }
pallet-timestamp                           = { version = "31.0.0", default-features = false }
sp-arithmetic                              = { version = "26.0.0", default-features = false }
sp-core                                    = { version = "32.0.0", default-features = false }
sp-io                                      = { version = "34.0.0", default-features = false }
sp-runtime                                 = { version = "35.0.0", default-features = false }
sp-std                                     = { version = "14.0.0", default-features = false }

# orml
orml-vesting = { version = "0.10.0", default-features = false }

# Ajuna
pallet-ajuna-affiliates                   = { path = "pallets/ajuna-affiliates", default-features = false }
pallet-ajuna-awesome-avatars              = { path = "pallets/ajuna-awesome-avatars", default-features = false }
pallet-ajuna-battle-mogs                  = { path = "pallets/ajuna-battle-mogs", default-features = false }
pallet-ajuna-board                        = { path = "pallets/ajuna-board", default-features = false }
pallet-ajuna-matchmaker                   = { path = "pallets/ajuna-matchmaker", default-features = false }
pallet-ajuna-new-omega                    = { path = "pallets/ajuna-new-omega", default-features = false }
pallet-ajuna-awesome-avatars-benchmarking = { path = "pallets/ajuna-awesome-avatars/benchmarking", default-features = false }
pallet-ajuna-nft-transfer                 = { path = "pallets/ajuna-nft-transfer", default-features = false }
pallet-ajuna-nft-staking                  = { path = "pallets/ajuna-nft-staking", default-features = false }
pallet-ajuna-tournament                   = { path = "pallets/ajuna-tournament", default-features = false }
pallet-ajuna-wildcard                     = { path = "pallets/ajuna-wildcard", default-features = false }
