[workspace.package]
authors    = [ "Ajuna Network <https://github.com/ajuna-network>" ]
edition    = "2021"
homepage   = "https://ajuna.io"
repository = "https://github.com/ajuna-network/ajuna-pallets"
version    = "0.12.0"

[workspace]
resolver = "2"
members = [
    "orml-pallets-benchmarking",
    "pallets/*",
    "pallets/ajuna-awesome-avatars/benchmarking",
    "pallets/ajuna-nft-staking/benchmarking",
]

[workspace.dependencies]
# General
hex = { version = "0.4.3", default-features = false }
log = { version = "0.4.17", default-features = false }

# Parity codec
parity-scale-codec = { version = "3.0.0", default-features = false }
scale-info         = { version = "2.1.1", default-features = false }

# Substrate
frame-benchmarking                         = { version = "35.0.0", default-features = false }
frame-support                              = { version = "35.0.0", default-features = false }
frame-system                               = { version = "35.0.0", default-features = false }
pallet-assets                              = { version = "36.0.0", default-features = false }
pallet-balances                            = { version = "36.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "23.0.0", default-features = false }
pallet-nfts                                = { version = "29.0.0", default-features = false }
pallet-timestamp                           = { version = "34.0.0", default-features = false }
sp-arithmetic                              = { version = "26.0.0", default-features = false }
sp-core                                    = { version = "34.0.0", default-features = false }
sp-io                                      = { version = "37.0.0", default-features = false }
sp-runtime                                 = { version = "38.0.0", default-features = false }
sp-std                                     = { version = "14.0.0", default-features = false }

# orml
orml-vesting = { version = "0.13.0", default-features = false }

# Ajuna
pallet-ajuna-affiliates                   = { path = "pallets/ajuna-affiliates", default-features = false }
pallet-ajuna-awesome-avatars              = { path = "pallets/ajuna-awesome-avatars", default-features = false }
pallet-ajuna-battle-mogs                  = { path = "pallets/ajuna-battle-mogs", default-features = false }
pallet-ajuna-board                        = { path = "pallets/ajuna-board", default-features = false }
pallet-ajuna-matchmaker                   = { path = "pallets/ajuna-matchmaker", default-features = false }
pallet-ajuna-awesome-avatars-benchmarking = { path = "pallets/ajuna-awesome-avatars/benchmarking", default-features = false }
pallet-ajuna-nft-transfer                 = { path = "pallets/ajuna-nft-transfer", default-features = false }
pallet-ajuna-nft-staking                  = { path = "pallets/ajuna-nft-staking", default-features = false }
pallet-ajuna-tournament                   = { path = "pallets/ajuna-tournament", default-features = false }
pallet-ajuna-wildcard                     = { path = "pallets/ajuna-wildcard", default-features = false }
