[package]
description = "Ajuna Network pallet used to handle account affiliates"
name        = "pallet-ajuna-affiliates"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
# Ajuna
ajuna-primitives   = { workspace = true }
# Substrate (wasm)
frame-support      = { workspace = true }
frame-system       = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info         = { workspace = true, features = [ "derive" ] }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

# Benchmarking
frame-benchmarking = { workspace = true, optional = true }
pallet-balances    = { workspace = true, optional = true }
sp-io              = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-io           = { workspace = true }

[features]
default = [ "std" ]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "ajuna-primitives/std",
    "pallet-balances/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "ajuna-primitives/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "sp-runtime/try-runtime",
]
