[package]
description = "Ajuna Network pallet used to handle the transformation of Game Assets into an NFT-ready format"
name        = "pallet-ajuna-nft-transfer"
version     = "0.1.0"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
# Substrate - FRAME
frame-support      = { workspace = true }
frame-system       = { workspace = true }
# Substrate - SCALE codec
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info         = { workspace = true, features = [ "derive" ] }
# Substrate - Primitives
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

[dev-dependencies]
# Substrate - FRAME
pallet-balances = { workspace = true }
pallet-nfts     = { workspace = true }
# Substrate - Primitives
sp-io           = { workspace = true }

[features]
default = [ "std" ]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-nfts/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
std = [
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-nfts/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-nfts/try-runtime",
    "sp-runtime/try-runtime",
]
