[package]
description = "Ajuna Network pallet used to handle tournaments"
name        = "pallet-ajuna-tournament"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
# General
log = { workspace = true }

# Substrate (wasm)
frame-support      = { workspace = true }
frame-system       = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info         = { workspace = true, features = [ "derive" ] }
sp-arithmetic      = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-io           = { workspace = true, features = ["std"] }

[features]
default = [ "std" ]
std = [
    "log/std",
    "pallet-balances/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-io/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "sp-arithmetic/std",
    "sp-runtime/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "sp-runtime/try-runtime",
]
