[package]
description = "Ajuna Network pallet used to interact with Erdstall chain bridge"
name        = "pallet-ajuna-wildcard"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate (wasm)
frame-benchmarking = { workspace = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info         = { workspace = true, features = [ "derive" ] }
sp-core            = { workspace = true }
sp-runtime         = { workspace = true }

[dev-dependencies]
pallet-assets    = { workspace = true }
pallet-balances  = { workspace = true }
pallet-nfts      = { workspace = true }
pallet-timestamp = { workspace = true }
sp-io            = { workspace = true }

[features]
default = [ "std" ]
std = [
    "scale-info/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "pallet-assets/std",
    "pallet-balances/std",
    "pallet-nfts/std",
    "pallet-timestamp/std",
    "parity-scale-codec/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-assets/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-nfts/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-assets/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-nfts/try-runtime",
    "pallet-timestamp/try-runtime",
    "sp-runtime/try-runtime",
]
