[package]
name = "example-transition"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Substrate - FRAME
frame-support      = { workspace = true }
sp-std             = { workspace = true }
# Substrate - SCALE codec
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info         = { workspace = true, features = [ "derive" ] }

# Sage
sage-api = { workspace = true}

[features]
std = [
    "frame-support/std",
    "sp-std/std",
    "parity-scale-codec/std",
    "scale-info/std",
    # Sage
    "sage-api/std",
]