[package]
name = "sage-pallet"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Substrate - FRAME
frame-support      = { workspace = true }
frame-system       = { workspace = true }
# Substrate - SCALE codec
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info         = { workspace = true, features = [ "derive" ] }
# Substrate - Primitives
sp-core            = { workspace = true }
sp-io              = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }
# Ajuna
sage-api           = { workspace = true }

[dev-dependencies]

[features]
default = [ "std" ]
std = [
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    # Ajuna
    "sage-api/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
