[package]
description = "Ajuna Network pallet used for Awesome Avatars benchmarking"
name = "pallet-ajuna-awesome-avatars-benchmarking"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# General
hex = { workspace = true, features = ["alloc"] }
log = { workspace = true }

# Substrate - FRAME
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-nfts = { workspace = true }
# Substrate - SCALE codec
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
# Substrate - Primitives
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Ajuna
pallet-ajuna-affiliates = { workspace = true }
pallet-ajuna-nft-transfer = { workspace = true }
pallet-ajuna-awesome-avatars = { workspace = true }
pallet-ajuna-tournament = { workspace = true }
pallet-ajuna-battle-royale = { workspace = true }

[dev-dependencies]
# Substrate - Primitives
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
    "hex/std",
    "log/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-ajuna-affiliates/std",
    "pallet-ajuna-awesome-avatars/std",
    "pallet-ajuna-battle-royale/std",
    "pallet-ajuna-nft-transfer/std",
    "pallet-ajuna-tournament/std",
    "pallet-balances/std",
    "pallet-insecure-randomness-collective-flip/std",
    "pallet-nfts/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-ajuna-affiliates/runtime-benchmarks",
    "pallet-ajuna-awesome-avatars/runtime-benchmarks",
    "pallet-ajuna-battle-royale/runtime-benchmarks",
    "pallet-ajuna-nft-transfer/runtime-benchmarks",
    "pallet-ajuna-tournament/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-nfts/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-ajuna-affiliates/try-runtime",
    "pallet-ajuna-awesome-avatars/try-runtime",
    "pallet-ajuna-battle-royale/try-runtime",
    "pallet-ajuna-nft-transfer/try-runtime",
    "pallet-ajuna-tournament/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-insecure-randomness-collective-flip/try-runtime",
    "pallet-nfts/try-runtime",
    "sp-runtime/try-runtime",
]
